Actions
Bug #7306
closednvme ignores interrupt enabling failure
Start date:
2016-08-16
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
needs-triage
Gerrit CR:
Description
As was just pointed out to me I introduced a bug in the error code path in the fix for 7275. When interrupt enabling fails we still return DDI_SUCCESS and let the driver run without interrupts, which will fail very soon by command timeouts.
Updated by Electric Monk almost 6 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit 75b41617efad806d8ab3d1866425189c0b0bc6aa
commit 75b41617efad806d8ab3d1866425189c0b0bc6aa Author: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Date: 2016-08-25T15:04:45.000Z 7306 nvme ignores interrupt enabling failure Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Robert Mustacchi <rm@joyent.com>
Actions